Address code review findings: restore the frozen Subject-propagation contract
Reconciles the JDK 25 migration with the agreed plan after review lenses found
the implementation had grown surface beyond it. 39 paths (7 added, 32 modified).

Seam restored to the frozen contract:
- SubjectPreservingTasks: exactly wrap(Runnable), wrap(Callable), unwrap(Runnable)
  plus two private decorators; both mandated fast paths reinstated (thread-inherits
  and captured-null); removed wrapEach, unwrapAll, isAlreadyCurrent,
  PreparingCollection and the decorator toString() overrides.
- HadoopThreadPoolExecutor overrides execute(Runnable) only;
  HadoopScheduledThreadPoolExecutor overrides the four schedule* only. Removed the
  newTaskFor, invokeAny, shutdownNow, remove, purge, FutureTask subclass and
  ThreadLocal ledger additions that double-wrapped or exceeded the contract.
- SubjectPreservingExecutorService keeps exactly the eight submission
  interceptions; bulk preparation moved to a private helper.
- Both unwrap obligations preserved so log output stays byte-identical:
  ExecutorHelper unwraps before its Future test, and both beforeExecute
  overrides unwrap before naming the task class.
- ValueQueue reduced to the mandated single-identifier redirect plus its import.

SecurityManager-era API removed per JEP 486: seven privileged actions inlined,
the thread-group idiom collapsed, and the dead Policy import dropped. Main-source
audit goes from 28 hits in 10 files to 9 in 1 - the documented compatibility shim,
where they remain only as comments and string literals.

Three regression suites (70 tests) prove propagation through every factory, both
pool classes, both forwarding services, both decorating executors, the
same-worker reuse case, and the two guard branches. Green on JDK 25 and JDK 17.
Disabling the fix fails 48 of them.

JDK25Migration.md documents the static audit, the nine behavioural resolutions,
five conflict resolutions, the zero flaky exclusions, and the measured 